# eetc-eett

./: .clang-format  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json
cmake/: buildcache.cmake  clang-tidy.cmake  pkg.cmake
include/eetc-eett/driving_regime/: driving_regime.h
include/eetc-eett/precomputation/: expanded_parameter.h
include/eetc-eett/simulation/: simulation_result.h
src/: main.cc
src/driving_regime/: driving_regime.cc
src/simulation/: simulation_result.cc
test/precomputation/: expanded_parameter_test.cc
